--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </title>
 </head>
 <body>
-    <h1>Hello World!</h1>    
+    <h1>Hello World!</h1>
+    <h2>Github is not easy</h2>  
 </body>
 </html>
