--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Hello People!</h1>
     <h2>github isn't easy</h2>
 </body>
 </html>
